takeOne function working

--- a/voteStyles.css
+++ b/voteStyles.css
@@ -1,6 +1,6 @@
-body {
+/*body {
   background-image: linear-gradient( rgba(0, 0, 0, .1), rgba(0, 0, 0, .1) ), url("background.jpg");
-}
+}*/
 
 h1 {
   font-family: 'Titan One', cursive;
