--- a/voteStyles.css
+++ b/voteStyles.css
@@ -28,6 +28,15 @@ img {
   text-align: center;
 }
 
+#spacing {
+  height: 100px;
+}
+
+#chart {
+  width: 750px;
+  margin: 0 auto;
+}
+
 #veryBottom {
   position: fixed;
   bottom: 0;
